--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
+<center>
 <iframe width="854" height="480" src="https://www.youtube.com/embed/f9aPdXlqy2s?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</center>
+
+<a href="http://emanhmc.ezyro.com">click here if you're brave enough</a>
