--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
+<html>
+<head>
+<title>emanh's github page</title>
+<meta name="description" content="emanh's github page">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
 <center>
 <iframe width="854" height="480" src="https://www.youtube.com/embed/f9aPdXlqy2s?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+<br>
+<a href="https://www.youtube.com/herobrinetm?sub_confirmation=1">click here if you're brave enough</a>
+<br>
+<a href="http://emanhmc.ezyro.com">click here if you're braver than brave enough</a>
 </center>
-
-<a href="http://emanhmc.ezyro.com">click here if you're brave enough</a>
+</body>
+</html>
