--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html>
 <head>
-<title>emanh's github page</title>
+<title>emanh's github page (cdn lol)</title>
 <meta name="description" content="emanh's github page">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <center>
+  <h1><a href="/cdn/">emanh's cdn</a></h1>
+  <br>
+  pls dont sue me github okthxbye
+<br>
 <iframe width="854" height="480" src="https://www.youtube.com/embed/f9aPdXlqy2s?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 <br>
 <a href="https://www.youtube.com/herobrinetm?sub_confirmation=1">click here if you're brave enough</a>
