--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <title>emanh's github page</title>
 <meta name="description" content="emanh's github page">
@@ -6,12 +7,14 @@
 <link rel="stylesheet" href="cdn/css/materialize.css">
 </head>
 <body>
-<center>
   <h1>emanh's github page</h1>
   <br>
   i use this for cdn pls dont sue me github okthxbye
 <br>
-<iframe width="854" height="480" src="https://www.youtube.com/embed/f9aPdXlqy2s?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+<video controls>
+  <source src="cdn/vid/fightthepower.mp4" type="video/mp4">
+  u need to upgrade ur pc
+</video>
 <br>
 <a href="https://www.youtube.com/herobrinetm?sub_confirmation=1">click here if you're brave enough</a>
 <br>
